--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
   "license": "MIT",
   "devDependencies": {
     "concurrently": "^8.2.2"
+  },
+  "dependencies": {
+    "mongoose": "^8.16.3"
   }
-} 
+}
